# sofiza

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: rust-check.yml
examples/: create.rs  harp.rs  instrument_harp.sfz  parse.rs
examples/instruments/: Nylon Guitar.sfz
src/: error.rs  errors.rs  lib.rs  sfz.rs  utils.rs
src/sfz/: group.rs  headers.rs  instrument.rs  mod.rs  region.rs  types.rs  utils.rs
src/sfz/opcodes/: defaults.rs  mod.rs  opcode.rs  parse.rs
src/sfz/opcodes/data/: opcodes-aria-extension_78.txt  opcodes-cakewalk-v2_162.txt  opcodes-v1_184.txt  opcodes-v2_166.txt
src/sfz/utils/: misc.rs  parse.rs
src/utils/: misc.rs  parse.rs
