[package]
name = "sofiza"
description = "SFZ format parser"
version = "0.1.2"
edition = "2018"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/sofiza"
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
    "src/sfz/*.rs",
    "src/sfz/opcodes/*.rs",
    "src/sfz/opcodes/data/*.txt",
    "src/utils/*.rs",
    "Cargo.toml",
]
categories = ["parser-implementations", "multimedia::audio"]
keywords = ["parser", "audio", "virtual", "music", "instrument"]

[dependencies]
logos = "0.11"
regex = "1"

phf = { version = "0.8", features = ["macros"] }

# change for the `!` type when it stabilizes:
# https://github.com/rust-lang/rust/issues/35121
never = "0.1.0"

thiserror = "1.0"


[dev-dependencies]
anyhow = "1.0"
