[package]
name = "sofiza"
description = "SFZ format parser"
version = "0.3.0"
edition = "2021"
resolver = "2"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/sofiza"
license = "MIT/Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md"
]
categories = ["parser-implementations", "multimedia::audio"]
keywords = ["parser", "audio", "virtual", "music", "instrument"]
publish = true

[dependencies]
logos = "0.12.1"
regex = "1"

phf = { version = "^0.11.1", features = ["macros"] }

# change for the `!` type when it stabilizes:
# https://github.com/rust-lang/rust/issues/35121
never = "0.1"

thiserror = "^1.0"

[dev-dependencies]
anyhow = "^1.0"

[badges]
# actively-developed, passively-maintained, looking-for-maintainer, as-is,
# experimental, deprecated, none
maintenance = { status = "actively-developed" }
